# simple-api-rs

./: Cargo.toml  Dockerfile  Makefile
contrib/: config.yaml
deploy/: de-simple-api.yaml  svc-simple-api.yaml
src/: app.rs  args.rs  articles.rs  auth.rs  config.rs  exporter.rs  fault_inject.rs  hello.rs  lib.rs  logging.rs  main.rs  otel.rs  prelude.rs  status.rs
tests/: 01_article.json  out.lst
