[package]
name = "simple-api-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
openssl = { version = "0.10", features = ["vendored"] }
full = "0.3.0"
poem = { version = "3.1.12", features = ["prometheus","opentelemetry"]}
serde = "1.0.219"
tokio = { version = "1.47.1", features = ["full"] }
serde_json = "1.0.143"
oidc-jwt-validator = "0.2.3"
reqwest = "0.11.27"
prometheus = "0.14.0"
chrono = "0.4.41"
rand = "^0.8.5"
tracing = "0.1.41"
opentelemetry = "0.30.0"
opentelemetry_sdk = "0.30.0"
opentelemetry-http = "0.30.0"
opentelemetry-otlp = { version  = "0.30.0", features = ["grpc-tonic"] }
anyhow = "1.0.99"
